--- a/app/views/rfps/index.html.erb
+++ b/app/views/rfps/index.html.erb
@@ -22,14 +22,20 @@
     
           <% @rfps.each do |p| %>
         
-          <h5> <%= p.product.commodity %> </h5>
+          <h6> <%= p.product.commodity %> </h6>
         </div>
-
-          <h5> <%= nice_date p.end_date %> </h5>  
-          <h5> <%= nice_date p.delivery_date %> </h5>
-          <h5> <%= p.order_size %> </h5>
+        <div class="index-content-wrapper">  
+          <h6 class="index-label"> Final Bidding Date </h6>
+          <h6 class="index-content"> <%= nice_date p.end_date %> </h6>  
+          <h6 class="index-label"> First Date of Delivery </h6>
+          <h6 class="index-content"> <%= nice_date p.delivery_date %> </h6>
+          <h6 class="index-label"> Product Volume </h6>
+          <h6 class="index-content"> <%= "#{p.order_size} k ton" %> </h6>
+          <div class="view-link"> <%= link_to 'View', rfp_path(p.id) %> </div>
+        </div>
       </div>
     </div>
+      
       <% end %>
   </div> <!-- End of column -->
 </div> <!-- End of explore-rfp-container -->
