--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -48,11 +48,8 @@
         color: black;
       }
     }
-
-    .submit-signup {
-      input {
-        margin-left: 325px;
-      }
-    }
+  }
+  .signup-button1 {
+    text-align: center;
   }
 }
