--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -50,14 +50,10 @@
 
   <div class="final-wrapper">
     <h5 class="required">*Required field</h5>
-    
       <div class="actions">
-       <%= f.submit "Create RFP" %>
+       <%= f.submit "Create RFP", 'data-no-turbolink' => true %>
       </div>
+       <% end %>
     </div>
   </div> 
-
-        
-      <% end %>
-
 </div>
