--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -51,9 +51,8 @@
   <div class="final-wrapper">
     <h5 class="required">*Required field</h5>
       <div class="actions">
-       <%= f.submit "Create RFP", 'data-no-turbolink' => true %>
+       <%= f.submit "Create RFP", data: { no_turbolink: true } %>
       </div>
        <% end %>
-    </div>
-  </div> 
+  </div><!-- end of text-field-wrapper --> 
 </div>
