--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <li class="nav-link"><a href="/About">About Us</a></li>
         <% if user_signed_in? %>
           <li class="nav-link"><a href="/Market Deals">Market Deals</a></li>
-          <li class="nav-link"><a href="/Create RFP">Create RFP</a></li>
+          <li class="nav-link"><a href="/Create RFP" data-no-turbolink="true"> Create RFP</a></li>
         <% else %>  
 
         <% end %>
