--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -7,18 +7,20 @@
   padding: 10px;
   width: 100%;
   margin: 0 auto;
+  margin-bottom: 16px;
   .signup-header {
-  text-align: center;
-  font-size: 20px;
-    } 
+    text-align: center;
+    font-size: 24px;
+    margin-top: 12px;
+  } 
   input::-webkit-input-placeholder {
-    font-size: 0.8em;
-    }
+   font-size: 0.8em;
+  }
 }
 
 .text-field-wrapper {
   @include outer-container(100%);
-  .rfp-field-wrapper{
+  .rfp-field-wrapper {
     float: left;  
     @include span-columns(12);
     input {
@@ -29,88 +31,89 @@
     margin-left: 180px; 
     .spec-header {
       text-align: center;
+      color: #808080;
     }
   } 
 
-  .spec-field-wrapper{
+  .spec-field-wrapper {
     display: inline-block;
     width: 63%;
     @include outer-container(70%);
     margin-left: 100px;
     .spec-header {
       text-align: center;
+      color: #808080;
     }
-    .col-wrapper{
+    .col-wrapper {
       @include outer-container(100%);
       @include span-columns(12); 
-      .col-spec-wrapper1{
+      .col-spec-wrapper1 { 
         display: inline-block;
         @include span-columns(1.45  of 10);
         width: 108px;
       }
-      .col-spec-wrapper2{
+      .col-spec-wrapper2 {
         display: inline-block;
         @include span-columns(1.70 of 10);
       }
-      .col-spec-wrapper3{
+      .col-spec-wrapper3 {
         display: inline-block;
         @include span-columns(1.65 of 10);
       }
-      .col-spec-wrapper4{
+      .col-spec-wrapper4 {
         display: inline-block;
         @include span-columns(1.1 of 10);
       }
-      .col-spec-wrapper5{
+      .col-spec-wrapper5 {
         display: inline-block;
         @include span-columns(1.05 of 10);
       }
-      .col-spec-wrapper6{
+      .col-spec-wrapper6 {
         display: inline-block;
         @include span-columns(2.65 of 10);
-        width: 100px;
+        width: 180px;
       }
     }
-    .spec-field-wrapper2{
+    .spec-field-wrapper2 {
       @include outer-container(100%);
-        .product-field-wrapper{
-          @include outer-container(10%);
-          @include span-columns(12);   
-          .spec-wrapper1 {
-            // display: inline-block;
-            @include span-columns(2 of 12);
-            min-width: 125px;
-          }
-        }
-        .jr-spec-field-wrapper{
-          @include outer-container(90%);
-          @include span-columns(10);
-          margin-left: 22px;
-          input{
-            padding-left: 4px;
-          } 
-          .spec-wrapper2 {
-            display: inline-block;
-            @include span-columns(2 of 10);
-          }
-          .spec-wrapper3 {
-            display: inline-block;
-            @include span-columns(2 of 10);
-          }
-          .spec-wrapper4 {
-            display: inline-block;
-            @include span-columns(1.35 of 10);
-          }
-          .spec-wrapper5 {
-            display: inline-block;
-            @include span-columns(1.3 of 10);
-          }
-          .spec-wrapper6 {
-            display: inline-block;
-            @include span-columns(2.65 of 10);
-          }
+      .product-field-wrapper {
+        @include outer-container(10%);
+        @include span-columns(12);   
+        .spec-wrapper1 {
+          @include span-columns(2 of 12);
+          min-width: 125px;
         }
       }
+    }
+    .jr-spec-field-wrapper{
+      @include outer-container(90%);
+      @include span-columns(10);
+      margin-left: 22px;
+      input{
+        padding-left: 4px;
+      } 
+      .spec-wrapper2 {
+        display: inline-block;
+        @include span-columns(2 of 10);
+      }
+      .spec-wrapper3 {
+        display: inline-block;
+        @include span-columns(2 of 10);
+      }
+      .spec-wrapper4 {
+        display: inline-block;
+        @include span-columns(1.35 of 10);
+      }
+      .spec-wrapper5 {
+        display: inline-block;
+        @include span-columns(1.3 of 10);
+      }
+      .spec-wrapper6 {
+        display: inline-block;
+        @include span-columns(2.65 of 10);
+      }  
     }     
+  }
 }
 
 .final-wrapper {
@@ -128,7 +131,6 @@
 
 //Show an RFP
 .rfp-show-wrapper {
-  margin-left: 100px;
   margin-top: 22px; 
   height: 600px; 
   padding-top: 20px;
@@ -137,11 +139,11 @@
 .rfp-show-header {
   margin-bottom: 32px;
   font-size: 1.8em;
-  margin-left: 550px;
+  margin-left: 600px;
 }
 
 .show-field-wrapper {
-  margin-left: 500px;
+  margin-left: 600px;
   margin-bottom: 20px;
   width: 1100px;
   @include outer-container(100%);
@@ -149,14 +151,14 @@
     padding-right: 0px;
     border: 1px solid black;
   }
-  .rfp-table-wrapper{
+  .rfp-table-wrapper {
     float: left;  
     width: 360px;
     color: black;
     @include outer-container(40%);
     .spec-header {
-     text-align: center;
-     color: #808080;
+      text-align: center;
+      color: #808080;
     }
     .rfp-wrapper2 {
       @include span-columns(8 of 12);
@@ -169,7 +171,7 @@
     }
   } 
 
-  .spec-table-wrapper{
+  .spec-table-wrapper {
     @include outer-container(57%);
     @include span-columns(12);
     margin-left: 40px;
@@ -212,28 +214,28 @@
     .spec-show-container {
       @include outer-container(100%);
       @include span-columns(12); 
-      .spec-show-container1{
+      .spec-show-container1 {
         display: inline-block;
         @include span-columns(1.7  of 12);
         width: 77px;
       }
-      .spec-show-container2{
+      .spec-show-container2 {
         display: inline-block;
         @include span-columns(2.5 of 12);
       }
-      .spec-show-container3{
+      .spec-show-container3 {
         display: inline-block;
         @include span-columns(1.3 of 12);
       }
-      .spec-show-container4{
+      .spec-show-container4 {
         display: inline-block;
         @include span-columns(1.2 of 12);
       }
-      .spec-show-container5{
+      .spec-show-container5 {
         display: inline-block;
         @include span-columns(1.1 of 12);
       }
-      .spec-show-container6{
+      .spec-show-container6 {
         display: inline-block;
         @include span-columns(2.5 of 12);
         width: 100px;
@@ -242,7 +244,7 @@
   } 
 }
 
-input[type="submit"]{
+input[type="submit"] {
   margin-left: 5px;
 } 
 
@@ -262,8 +264,8 @@ input[type="submit"]{
 .price-input-wrapper {
   width: 300px;
   .price-input-wrapper2 {
-  width: 128px;
-  display: inline-block;
+    width: 128px;
+    display: inline-block;
   .bid-label2 {
     display: inline-block;
     }
