updated output of product name on the show page

--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -8,7 +8,7 @@
                         ["Carbon residue", "Specs::Carbon_residue"],
                         ["Ash %", "Specs::Ash"],
                         ["Water", "Specs::Water"],
-                        ["Sulfur", "Specs::Vanadium"],
+                        ["Vanadium", "Specs::Vanadium"],
                         ["Aluminum + silicon", "Specs::Aluminum_plus_silicon"],
                         ["Zinc", "Specs::Zinc"],
                         ["Phosphorus", "Specs::Phosphorus"],
