--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="bullet-content">
       <h2>Supply Discovery</h2>
-      <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+      <p>We provided the deepest market for physical petroleum discovery in the world.  Supporting all forms of refined petroleum products, and with market participants from around the globe, we provide broader supply access than any other medium.</p>
       </div>
   </li>  
   <li class="bullet">
@@ -23,7 +23,7 @@
     </div>
     <div class="bullet-content">
       <h2>Product Placement</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+      <p>We understand the issues with traditional cargoe placement.  Our platform enables seemless transactions and handoff of purchased product. Our process and indepenedence enables verification for all parts of the transaction process. </p>
     </div>
   </li>
   <li class="bullet">
@@ -32,7 +32,7 @@
     </div>
     <div class="bullet-content">
       <h2>RFP Transparency</h2>
-      <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+      <p>Oil Xchange is an indepenedent entity, enabling full tracking and transparency of every RFP that occurs on the platform.  Our annoynmous RFP platform provides an audited trail for governments to ensure the process is open and fair.</p>
     </div>
   </li> 
 </ul>
