--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -132,7 +132,7 @@
 //Show an RFP
 .rfp-show-wrapper {
   margin-top: 22px; 
-  height: 600px; 
+  height: 560px; 
   padding-top: 20px;
 }
 
@@ -172,7 +172,7 @@
   } 
 
   .spec-table-wrapper {
-    @include outer-container(57%);
+    @include outer-container(58%);
     @include span-columns(12);
     margin-left: 40px;
     .spec-header2 {
@@ -184,24 +184,25 @@
       @include span-columns(12); 
       .col-spec-show-wrapper2 {
         display: inline-block;
-        @include span-columns(1.7  of 12);
+        @include span-columns(1.4  of 12);
         max-width: 130px;
       }
       .col-spec-show-wrapper3 {
         display: inline-block;
-        @include span-columns(2.3 of 12);
+        @include span-columns(2.9 of 12);
+        width: 22%;
       }
       .col-spec-show-wrapper4 {
         display: inline-block;
-        @include span-columns(1.25 of 12);
+        @include span-columns(1.35 of 12);
       }
       .col-spec-show-wrapper5 {
         display: inline-block;
-        @include span-columns(1.15 of 12);
+        @include span-columns(1.2 of 12);
       }
       .col-spec-show-wrapper6 {
         display: inline-block;
-        @include span-columns(1.25 of 12);
+        @include span-columns(1.2 of 12);
         max-width: 200px;
       }
       .col-spec-show-wrapper7 {
@@ -214,30 +215,38 @@
     .spec-show-container {
       @include outer-container(100%);
       @include span-columns(12); 
-      .spec-show-container1 {
-        display: inline-block;
-        @include span-columns(1.7  of 12);
-        width: 77px;
+      .product-show-wrapper {
+        @include outer-container(10.1%);
+        @include span-columns(2); 
+        .spec-show-container1 {
+          display: inline-block;
+          @include span-columns(1.8 of 12);
+          width: 80px;
+        }
       }
+    }
+    .jr-show-field-wrapper {
+      @include outer-container(90%);
+      @include span-columns(10);
       .spec-show-container2 {
         display: inline-block;
-        @include span-columns(2.5 of 12);
+        @include span-columns(2.9  of 10);
       }
       .spec-show-container3 {
         display: inline-block;
-        @include span-columns(1.3 of 12);
+        @include span-columns(1.4 of 10);
       }
       .spec-show-container4 {
         display: inline-block;
-        @include span-columns(1.2 of 12);
+        @include span-columns(1.2 of 10);
       }
       .spec-show-container5 {
         display: inline-block;
-        @include span-columns(1.1 of 12);
+        @include span-columns(1.2 of 10);
       }
       .spec-show-container6 {
         display: inline-block;
-        @include span-columns(2.5 of 12);
+        @include span-columns(2.5 of 10);
         width: 100px;
       }
     }
@@ -245,7 +254,10 @@
 }
 
 input[type="submit"] {
-  margin-left: 5px;
+  text-align: center; 
+  display: inline-block;
+  padding-right: 20px;  
+  margin-bottom: 3px;
 } 
 
 .edit-links {
@@ -261,15 +273,37 @@ input[type="submit"] {
   }
 }  
 
+.bids-wrapper {
+  margin-top: 30px;
+}
+
 .price-input-wrapper {
+  margin-top: 250px;
+  margin-left: 78px;
   width: 300px;
-  .price-input-wrapper2 {
-    width: 128px;
+}
+.price-input-wrapper2 {
+  width: 128px;
+  display: inline-block;
+  .bid-label {
     display: inline-block;
-  .bid-label2 {
-    display: inline-block;
-    }
   }
+}
+
+.bid-label2 {
+  height: 10px;
+  margin-left: 80px;
+  width: 100px;
+}
+
+.actions2 {
+  display: inline-block;
+  width: 150px; 
+}
+
+.final-wrapper2 {
+  display: inline-block;
+  padding-right: 4px; 
 }
 
 
@@ -370,7 +404,7 @@ input[type="submit"] {
       @include span-columns(4);
       font-weight: 400;
       font-size: 0.9em;
-      color: blue;
+      color: #808080;
     }
   }
 }
